--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0px;
   .form-header {
     color: #999997;
     font-family: $primary-font;
@@ -30,21 +31,42 @@
   }
   form {
     margin: 0;
+    margin-bottom: 128px;
     padding: 0;
     display: flex;
     gap: 24px;
+    box-sizing: border-box;
     input {
       margin-top: 16px;
-      height: 32px;
+      height: 43px;
       box-sizing: border-box;
     }
+    #email {
+      width: 646px;
+      padding-left: 12px;
+      font-family: $primary-font;
+      font-weight: 1000;
+      color: black;
+      font-size: 18px;
+      &::placeholder {
+        font-family: $primary-font;
+        font-weight: 1000;
+        color: black;
+      }
+      &:focus,
+      &:hover {
+        border: 4px solid black;
+      }
+    }
     #submit {
-      //   background-color: $purple;
       background-color: purple;
       color: white;
       font-family: $primary-font;
       border: 0px;
-      font-weight: 500;
+      font-size: 18px;
+      font-weight: 1000;
+      padding: 8px 32px;
+      box-sizing: border-box;
     }
   }
 }
