--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,11 +1,15 @@
 <div class="footer">
   <div class="footer-texts">
-    <h2>mass<br />records</h2>
+    <div class="headertitle">
+      <div class="header purple">mass</div>
+      <div class="header">records</div>
+    </div>
     <p class="footer-text">
       I'm a paragraph. Click here to add your own text and edit me. I’m a great
       place for you to tell a story and let your users know a little more about
       you.
     </p>
+    <p class="license">© 2035 by Mass Records. Powered and secured by Wix</p>
   </div>
-  <p>© 2035 by Mass Records. Powered and secured by Wix</p>
+
 </div>
