--- a/src/app/shared/ui/footer/footer.component.scss
+++ b/src/app/shared/ui/footer/footer.component.scss
@@ -1,12 +1,47 @@
+@import "@app-style-var";
 .footer {
   width: 100%;
   height: 322px;
   background-color: black;
   margin: 0;
   padding: 0;
-}
-.footer-texts {
   display: flex;
   justify-content: center;
+}
+.footer-texts {
+  width: calc(100% - 48vw);
+  @media screen and (max-width: 800px) {
+    width: calc(62vw);
+  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding-top: 36px;
+}
+.header {
+  font-family: $primary-font;
+  font-size: 48px;
+  color: white;
+  line-height: 32px;
+}
+
+.purple {
+  color: $purple-color !important;
+}
+.footer-text{
+  color: white;
+  font-family: $primary-font;
+  font-size: 24px;
+  max-width: 580px;
+  width: 100%;
+  margin: 0;
+  @media screen and (max-width: 1670px) {
+    font-size: 18px;
+  }
+  @media screen and (max-width: 871px) {
+    font-size: 16px;
+  }
+}
+.license{
+  color: #999997;
 }
