--- a/src/app/shared/ui/movie/movie.component.scss
+++ b/src/app/shared/ui/movie/movie.component.scss
@@ -2,6 +2,9 @@
 .moviebox {
   width: 340px;
   height: 340px;
+  @media screen and (max-width: 1280px) {
+    font-size: 128px;
+  }
   background-color: black;
   cursor: pointer;
   position: relative;
@@ -26,5 +29,14 @@
     left: 0;
     padding: 32px 24px;
     z-index: 1;
+  }
+}
+h1{
+  margin-top: 16px;
+  color: black;
+  width: 320px;
+  display: none;
+  @media screen and (max-width: 870px) {
+    display: block;
   }
 }
