--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -3,7 +3,7 @@
   font-family: $primary-font;
   font-size: 200px;
   @media screen and (max-width: 1280px) {
-      font-size: 128px;
+    font-size: 128px;
   }
   @media screen and (max-width: 850px) {
     font-size: 15vw;
@@ -34,7 +34,7 @@
 
   justify-content: space-between;
   @media screen and (max-width: 871px) {
-      justify-content: center;
+    justify-content: center;
   }
 }
 .form {
@@ -104,9 +104,14 @@
       box-sizing: border-box;
       width: 100%;
       max-width: 111px;
+      cursor: pointer;
     }
   }
 }
-.wrong{
+.wrong {
   border: 4px solid red !important;
+}
+.disabled {
+  opacity: 0.7;
+  cursor: auto !important;
 }
