--- a/src/app/shared/ui/nav/nav.component.html
+++ b/src/app/shared/ui/nav/nav.component.html
@@ -1,34 +1,45 @@
 <nav id="nav1" style="display: none">
   <header>
-    <a routerLink=""> <img
-      class="main_logo"
-      [src]="header"
-      (mouseover)="switch()"
-      (mouseleave)="switchback()"
+    <a routerLink="">
+      <img
+        class="main_logo"
+        [src]="header"
+        (mouseover)="switch()"
+        (mouseleave)="switchback()"
     /></a>
 
     <h1>
-      <div class="header purple">{{ title.split('|')[0] }}</div>
-      <div class="header">{{ title.split('|')[1] }}</div>
+      <div class="header purple">{{ title.split("|")[0] }}</div>
+      <div class="header">{{ title.split("|")[1] }}</div>
     </h1>
   </header>
   <div class="net-nav">
     <div class="soc-networks">
-      <img class="media"
-           src="https://static.wixstatic.com/media/03ea2af965014a3eb32df628a4c18c0e.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/03ea2af965014a3eb32df628a4c18c0e.png"
-           alt="Soundcloud"/>
-      <img class="media"
-           src="https://static.wixstatic.com/media/0fdef751204647a3bbd7eaa2827ed4f9.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0fdef751204647a3bbd7eaa2827ed4f9.png"
-           alt="Facebook"/>
-      <img class="media"
-           src="https://static.wixstatic.com/media/c7d035ba85f6486680c2facedecdcf4d.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/c7d035ba85f6486680c2facedecdcf4d.png"
-           alt="Twitter"/>
-      <img class="media"
-           src="https://static.wixstatic.com/media/78aa2057f0cb42fbbaffcbc36280a64a.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/78aa2057f0cb42fbbaffcbc36280a64a.png"
-           alt="Youtube"/>
-      <img class="media"
-           src="https://static.wixstatic.com/media/01c3aff52f2a4dffa526d7a9843d46ea.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01c3aff52f2a4dffa526d7a9843d46ea.png"
-           alt="Instagram"/>
+      <img
+        class="media"
+        src="https://static.wixstatic.com/media/03ea2af965014a3eb32df628a4c18c0e.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/03ea2af965014a3eb32df628a4c18c0e.png"
+        alt="Soundcloud"
+      />
+      <img
+        class="media"
+        src="https://static.wixstatic.com/media/0fdef751204647a3bbd7eaa2827ed4f9.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0fdef751204647a3bbd7eaa2827ed4f9.png"
+        alt="Facebook"
+      />
+      <img
+        class="media"
+        src="https://static.wixstatic.com/media/c7d035ba85f6486680c2facedecdcf4d.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/c7d035ba85f6486680c2facedecdcf4d.png"
+        alt="Twitter"
+      />
+      <img
+        class="media"
+        src="https://static.wixstatic.com/media/78aa2057f0cb42fbbaffcbc36280a64a.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/78aa2057f0cb42fbbaffcbc36280a64a.png"
+        alt="Youtube"
+      />
+      <img
+        class="media"
+        src="https://static.wixstatic.com/media/01c3aff52f2a4dffa526d7a9843d46ea.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01c3aff52f2a4dffa526d7a9843d46ea.png"
+        alt="Instagram"
+      />
     </div>
     <div class="main-navigation">
       <a class="link purple" routerLink="">Releases</a>
@@ -40,36 +51,47 @@
 </nav>
 <nav id="nav2" style="display: none">
   <div class="soc-networks2">
-    <img class="media"
-         src="https://static.wixstatic.com/media/03ea2af965014a3eb32df628a4c18c0e.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/03ea2af965014a3eb32df628a4c18c0e.png"
-         alt="Soundcloud"/>
-    <img class="media"
-         src="https://static.wixstatic.com/media/0fdef751204647a3bbd7eaa2827ed4f9.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0fdef751204647a3bbd7eaa2827ed4f9.png"
-         alt="Facebook"/>
-    <img class="media"
-         src="https://static.wixstatic.com/media/c7d035ba85f6486680c2facedecdcf4d.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/c7d035ba85f6486680c2facedecdcf4d.png"
-         alt="Twitter"/>
-    <img class="media"
-         src="https://static.wixstatic.com/media/78aa2057f0cb42fbbaffcbc36280a64a.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/78aa2057f0cb42fbbaffcbc36280a64a.png"
-         alt="Youtube"/>
-    <img class="media"
-         src="https://static.wixstatic.com/media/01c3aff52f2a4dffa526d7a9843d46ea.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01c3aff52f2a4dffa526d7a9843d46ea.png"
-         alt="Instagram"/>
+    <img
+      class="media"
+      src="https://static.wixstatic.com/media/03ea2af965014a3eb32df628a4c18c0e.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/03ea2af965014a3eb32df628a4c18c0e.png"
+      alt="Soundcloud"
+    />
+    <img
+      class="media"
+      src="https://static.wixstatic.com/media/0fdef751204647a3bbd7eaa2827ed4f9.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0fdef751204647a3bbd7eaa2827ed4f9.png"
+      alt="Facebook"
+    />
+    <img
+      class="media"
+      src="https://static.wixstatic.com/media/c7d035ba85f6486680c2facedecdcf4d.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/c7d035ba85f6486680c2facedecdcf4d.png"
+      alt="Twitter"
+    />
+    <img
+      class="media"
+      src="https://static.wixstatic.com/media/78aa2057f0cb42fbbaffcbc36280a64a.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/78aa2057f0cb42fbbaffcbc36280a64a.png"
+      alt="Youtube"
+    />
+    <img
+      class="media"
+      src="https://static.wixstatic.com/media/01c3aff52f2a4dffa526d7a9843d46ea.png/v1/fill/w_22,h_22,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01c3aff52f2a4dffa526d7a9843d46ea.png"
+      alt="Instagram"
+    />
   </div>
   <div class="full-header">
     <div class="headertitle">
-      <a routerLink=""> <img
-        class="main_logo"
-        [src]="header"
-        (mouseover)="switch()"
-        (mouseleave)="switchback()"
+      <a routerLink="">
+        <img
+          class="main_logo"
+          [src]="header"
+          (mouseover)="switch()"
+          (mouseleave)="switchback()"
       /></a>
       <h1>
-        <div class="header purple">{{ title.split('|')[0] }}</div>
-        <div class="header">{{ title.split('|')[1] }}</div>
+        <div class="header purple">{{ title.split("|")[0] }}</div>
+        <div class="header">{{ title.split("|")[1] }}</div>
       </h1>
     </div>
-    <img class="menu-button" (click)="sidebar()" src="assets/svgs/list.svg">
+    <img class="menu-button" (click)="sidebar()" [src]="button" />
   </div>
   <div class="sidebar" [class.sactive]="sidebaropened">
     <ul>
