--- a/src/app/shared/ui/nav/nav.component.html
+++ b/src/app/shared/ui/nav/nav.component.html
@@ -42,10 +42,10 @@
       />
     </div>
     <div class="main-navigation">
-      <a class="link purple" routerLink="">Releases</a>
-      <a class="link" routerLink="">Artists</a>
-      <a class="link" routerLink="">News</a>
-      <a class="link" routerLink="">Contact</a>
+      <a class="link" routerLinkActive="purple" [routerLinkActiveOptions]="{exact:true}" routerLink="">Releases</a>
+      <a class="link" routerLinkActive="purple" routerLink="shorter">Shorter</a>
+      <a class="link" routerLinkActive="purple" routerLink="news">News</a>
+      <a class="link" routerLinkActive="purple" routerLink="contact">Contact</a>
     </div>
   </div>
 </nav>
@@ -95,10 +95,10 @@
   </div>
   <div class="sidebar" [class.sactive]="sidebaropened">
     <ul>
-      <li><a>Releases</a></li>
-      <li><a>Artists</a></li>
-      <li><a>News</a></li>
-      <li><a>Contact</a></li>
+      <li><a routerLinkActive="purple" routerLink="">Releases</a></li>
+      <li><a routerLinkActive="purple" routerLink="shorter">Shorter</a></li>
+      <li><a routerLinkActive="purple" routerLink="news">News</a></li>
+      <li><a routerLinkActive="purple" routerLink="contact">Contact</a></li>
     </ul>
   </div>
 </nav>
