--- a/src/app/shared/ui/nav/nav.component.scss
+++ b/src/app/shared/ui/nav/nav.component.scss
@@ -128,6 +128,8 @@ h1 {
           margin-bottom: 16px;
           text-decoration: none;
           a {
+            text-decoration: none;
+            color: black;
             transition: 0.3s all;
             font-family: $secondary-font;
             font-size: 30px;
