--- a/src/app/shared/ui/nav/nav.component.html
+++ b/src/app/shared/ui/nav/nav.component.html
@@ -42,9 +42,15 @@
       />
     </div>
     <div class="main-navigation">
-      <a class="link" routerLinkActive="purple" [routerLinkActiveOptions]="{exact:true}" routerLink="">Releases</a>
+      <a
+        class="link"
+        routerLinkActive="purple"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLink=""
+        >Releases</a
+      >
       <a class="link" routerLinkActive="purple" routerLink="shorter">Shorter</a>
-      <a class="link" routerLinkActive="purple" routerLink="news">News</a>
+      <a class="link" routerLinkActive="purple" routerLink="quotes">Quotes</a>
       <a class="link" routerLinkActive="purple" routerLink="contact">Contact</a>
     </div>
   </div>
@@ -97,7 +103,7 @@
     <ul>
       <li><a routerLinkActive="purple" routerLink="">Releases</a></li>
       <li><a routerLinkActive="purple" routerLink="shorter">Shorter</a></li>
-      <li><a routerLinkActive="purple" routerLink="news">News</a></li>
+      <li><a routerLinkActive="purple" routerLink="quotes">Quotes</a></li>
       <li><a routerLinkActive="purple" routerLink="contact">Contact</a></li>
     </ul>
   </div>
