--- a/src/app/features/movie-page/movie-page.component.html
+++ b/src/app/features/movie-page/movie-page.component.html
@@ -1,1 +1,14 @@
-<p>movie-page works!</p>
+@if (movie) {
+<main class="main-container">
+  <img [src]="movie.poster" />
+  <h1>{{ movie.name }}</h1>
+  <iframe
+    width="560"
+    height="315"
+    [src]="getEmbedLink(movie.trailer)"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</main>
+
+}
