--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<!-- <router-outlet></router-outlet> -->
-<app-movie-page></app-movie-page>
+ <router-outlet></router-outlet>
+<!--<app-movie-page></app-movie-page>-->
 <app-footer></app-footer>
