--- a/src/app/features/movie-page/movie-page.component.scss
+++ b/src/app/features/movie-page/movie-page.component.scss
@@ -1,57 +1,90 @@
+@import "@app-style-var";
 .movie-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   align-items: flex-start;
-  padding: 20px;
+  margin: 20px;
+  font-family: Arial, sans-serif;
+}
 
-  .poster-container {
-    flex: 0 0 30%;
-    max-width: 30%;
-    margin-right: 20px;
+.movie-poster img {
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-    img {
-      width: 100%;
-      height: auto;
-    }
+.movie-content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 100%;
+}
+
+.movie-details {
+  text-align: left;
+}
+
+.movie-details h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.trailer a {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 10px;
+  background-color: #ff5722;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.trailer a:hover {
+  background-color: #e64a19;
+}
+
+.cinemas {
+  margin-top: 20px;
+}
+
+.cinema {
+  margin-bottom: 20px;
+}
+
+.cinema h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.sessions-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  transition: 0.2s all;
+  cursor: pointer;
+
+  &:hover{
+    background-color: rgba(0,0,0,0);
   }
+}
 
-  .details-container {
-    flex: 1;
-    max-width: calc(70% - 20px);
+.session {
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
 
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
+.session-time,
+.session-lang,
+.session-price,
+.session-format {
+  margin-bottom: 5px;
+}
 
-    iframe {
-      width: 100%;
-      height: 300px;
-      margin-bottom: 20px;
-    }
-
-    .cinemas-container {
-      h2 {
-        font-size: 20px;
-        margin-bottom: 10px;
-      }
-
-      .cinema {
-        margin-bottom: 20px;
-
-        h3 {
-          font-size: 18px;
-          margin-bottom: 10px;
-        }
-
-        .sessions {
-          .session {
-            margin-bottom: 10px;
-            font-size: 16px;
-          }
-        }
-      }
-    }
-  }
+.session-time {
+  font-weight: bold;
 }
