--- a/src/app/shared/ui/nav/nav.component.html
+++ b/src/app/shared/ui/nav/nav.component.html
@@ -52,6 +52,7 @@
       <a class="link" routerLinkActive="purple" routerLink="shorter">Shorter</a>
       <a class="link" routerLinkActive="purple" routerLink="quotes">Quotes</a>
       <a class="link" routerLinkActive="purple" routerLink="contact">Contact</a>
+      <a class="link" routerLinkActive="purple-cart" routerLink="cart"><img src="assets/svgs/cart.svg"></a>
     </div>
   </div>
 </nav>
@@ -105,6 +106,7 @@
       <li><a routerLinkActive="purple" routerLink="shorter">Shorter</a></li>
       <li><a routerLinkActive="purple" routerLink="quotes">Quotes</a></li>
       <li><a routerLinkActive="purple" routerLink="contact">Contact</a></li>
+      <li><a routerLinkActive="purple" routerLink="cart">Cart</a></li>
     </ul>
   </div>
 </nav>
