--- a/src/app/features/contact/contact.component.scss
+++ b/src/app/features/contact/contact.component.scss
@@ -6,6 +6,8 @@
 }
 
 .contact-header {
+  animation: up 0.2s ease-out;
+  animation-iteration-count: 1;
   font-family: $primary-font;
   font-size: 200px;
   @media screen and (max-width: 1280px) {
