--- a/src/app/features/movie-page/movie-page.component.scss
+++ b/src/app/features/movie-page/movie-page.component.scss
@@ -1,90 +1,165 @@
 @import "@app-style-var";
-.movie-container {
-  display: flex;
-  align-items: flex-start;
-  margin: 20px;
-  font-family: Arial, sans-serif;
-}
-
-.movie-poster img {
-  width: 300px;
-  height: auto;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.movie-content {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  width: 100%;
-}
-
-.movie-details {
-  text-align: left;
-}
-
-.movie-details h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.trailer a {
-  display: inline-block;
-  padding: 10px 20px;
-  margin-top: 10px;
-  background-color: #ff5722;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.trailer a:hover {
-  background-color: #e64a19;
-}
-
-.cinemas {
-  margin-top: 20px;
-}
-
-.cinema {
-  margin-bottom: 20px;
-}
-
-.cinema h2 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.sessions-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-  transition: 0.2s all;
-  cursor: pointer;
-
-  &:hover{
-    background-color: rgba(0,0,0,0);
+$spacing-unit: 16px;
+$primary-color: #999997;
+$secondary-color: #ecf0f1;
+$accent-color: $purple-color;
+.home-header {
+  font-family: $primary-font;
+  font-size: 200px;
+  letter-spacing: 10vw;
+  animation: up 0.2s ease-out;
+  animation-iteration-count: 1;
+  @media screen and (max-width: 1280px) {
+    letter-spacing: 7vw;
+    font-size: 128px;
   }
-}
-
-.session {
-  border: 1px solid #ddd;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  @media screen and (max-width: 850px) {
+    font-size: 15vw;
+    letter-spacing: 5vw;
+  }
+  color: rgb(224, 222, 222);
+  font-weight: 1000;
   text-align: center;
+  margin-top: 0;
 }
+.main-container{
+  transform: translate(0, -9%);
+  @media screen and (max-width: 1640px) {
+    transform: translate(0, -5%);
+  }
+  @media screen and (max-width: 1251px) {
+    transform: translate(0, -4%);
+  }
+  @media screen and (max-width: 871px) {
+    transform: translate(0, -16vw);
+  }
+  .title-header {
+    font-size: 2.5rem;
+    margin-bottom: $spacing-unit;
+    color: black;
+    text-align: center;
+  }
 
-.session-time,
-.session-lang,
-.session-price,
-.session-format {
-  margin-bottom: 5px;
-}
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: 0.3s all ease-in-out ;
+    &:hover{
+      scale: 1.5;
+    }
+  }
 
-.session-time {
-  font-weight: bold;
+  iframe {
+    display: block;
+    margin: 2rem auto;
+    max-width: 100%;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: 0.3s all ease-in-out ;
+    &:hover{
+      scale: 1.5;
+    }
+  }
+
+  .tables {
+    margin: 2rem auto;
+    max-width: 800px;
+  }
+
+  .title2-header {
+    font-size: 2rem;
+    margin: 2rem 0 1rem;
+    color: black;
+    text-align: center;
+    margin: auto;
+    width: fit-content;
+    text-align: left;
+    font-family: $primary-font !important;
+    cursor: pointer;
+    transition: 0.4s all;
+    &:hover{
+      color: $purple-color;
+    }
+  }
+
+  table {
+    font-family: $secondary-font;
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 2rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding-bottom: 16px;
+    border-bottom: 2px solid $purple-color;
+  }
+
+  th, td {
+    padding: $spacing-unit / 2;
+    text-align: left;
+    border-bottom: 1px solid $primary-color;
+  }
+
+  th {
+    background-color: $purple-color;
+    color: $secondary-color;
+    text-transform: uppercase;
+  }
+
+  tr{
+    transition: 0.1s all ease-in-out;
+    &:hover{
+      background-color: darken($primary-color,1%);
+    }
+  }
+
+  tr:nth-child(even) {
+    background-color: ($primary-color, 40%);
+  }
+
+  button {
+    color: white;
+    border: none;
+    padding: $spacing-unit / 2 $spacing-unit;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    background-color: $purple-color;
+    color: white;
+    font-family: $primary-font;
+    border: 0px;
+    font-size: 16px;
+    font-weight: 1000;
+    padding: 4px 16px;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 111px;
+    cursor: pointer;
+    &:hover {
+      background-color: darken($accent-color, 10%);
+    }
+  }
+
+  @media (max-width: 600px) {
+    .title-header {
+      font-size: 2rem;
+    }
+
+    .title2-header {
+      font-size: 1.5rem;
+
+    }
+
+    th, td {
+      padding: $spacing-unit / 4;
+    }
+
+    button {
+      padding: $spacing-unit / 4 $spacing-unit / 2;
+    }
+  }
+
 }
