--- a/src/app/features/shorter/shorter.component.scss
+++ b/src/app/features/shorter/shorter.component.scss
@@ -13,6 +13,8 @@
   font-weight: 1000;
   text-align: center;
   margin-top: 0;
+  animation: up 0.2s ease-out;
+  animation-iteration-count: 1;
 }
 
 .shorter-container {
